# Hurra-v3

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md
core/: link_v3f.ld  link_v5f.ld  startup_v3f.S  startup_v5f.S  timebase.c  timebase.h  timebase_v5f.c  timebase_v5f.h
docs/: TODO-hardfloat-fpu.md  ch32h417-evt-reference.md
include/: ch32h417_it.h  ch32h417_port.h
memory/: MEMORY.md  gate-4c-real-passthrough-works.md  spi1-isr-not-broken.md  two-board-resend-load-bearing.md
scripts/: flash.py  merge_images.py  wch-riscv.cfg
src/: TF_Config.h  actions.c  actions.h  board.h  desc_capture.c  desc_capture.h  desc_serialize.c  desc_serialize.h  desc_xfer.c  desc_xfer.h  display.c  display.h  display_rowpick.h  ferrum.c  ferrum.h  font5x7.h  gesture.c  gesture.h  gesture_motion_v5f.c  gesture_stream_v5f.c  hid_iface_index.h  hid_layout.c  hid_layout.h  humanize.c  humanize.h  hurra.c  hurra.h  icc.c  icc.h  icc_status.c  inject_link.c  inject_link.h  kmbox.h  kmbox_cmd.c  kmbox_cmd.h  kmbox_cmd_host.c  kmbox_cmd_v5f_stub.c  led.c  led.h  main_v3f.c  (+43 more)
test/: actions_test.c  desc_capture_test.c  desc_serialize_test.c  desc_xfer_test.c  display_rowpick_test.c  display_test.c  ferrum_mask_test.c  flash_py_test.py  gesture_test.c  hid_iface_index_test.c  humanization_analyze_test.py  humanize_test.c  inject_apply_test.c  inject_link_test.c  motion_test.c  report_xfer_test.c  (+15 more)
tools/raw_input_classifier/: README.md  __init__.py  __main__.py  capture.py  dataset.py  encoders.py  metrics.py  model.py  pyproject.toml  trace.py  train.py  windowing.py
(+12 files in other folders)
